--- a/index.html
+++ b/index.html
@@ -283,14 +283,31 @@
             { color1: 0xfa709a, color2: 0xfee140 }
         ];
 
+        const videoUrls = [
+            'https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7317274213457788928?compact=1',
+            'https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7327045924390637569?compact=1',
+            'https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7340474950006247425?compact=1',
+            'https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7372138036412891136?compact=1',
+            'https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7373680075940130816?compact=1'
+        ];
+
         colors.forEach((colorPair, index) => {
-            // Create canvas for gradient
+            // Create iframe element
+            const iframe = document.createElement('iframe');
+            iframe.src = videoUrls[index];
+            iframe.width = 320;
+            iframe.height = 240;
+            iframe.frameBorder = 0;
+            iframe.allowFullscreen = true;
+            iframe.style.borderRadius = '12px';
+
+            // Create canvas from iframe (fallback to gradient if iframe fails)
             const canvas = document.createElement('canvas');
-            canvas.width = 512;
-            canvas.height = 384;
+            canvas.width = 320;
+            canvas.height = 240;
             const ctx = canvas.getContext('2d');
 
-            // Create gradient
+            // Gradient fallback
             const gradient = ctx.createLinearGradient(0, 0, canvas.width, canvas.height);
             gradient.addColorStop(0, `#${colorPair.color1.toString(16).padStart(6, '0')}`);
             gradient.addColorStop(1, `#${colorPair.color2.toString(16).padStart(6, '0')}`);
@@ -300,12 +317,12 @@
 
             // Add text
             ctx.fillStyle = 'white';
-            ctx.font = 'bold 48px Inter, Arial';
+            ctx.font = 'bold 24px Inter, Arial';
             ctx.textAlign = 'center';
-            ctx.fillText('TVILLING', canvas.width/2, canvas.height/2 - 20);
+            ctx.fillText('TVILLING', canvas.width/2, canvas.height/2 - 10);
 
-            ctx.font = '24px Inter, Arial';
-            ctx.fillText(`Demo Video ${index + 1}`, canvas.width/2, canvas.height/2 + 30);
+            ctx.font = '16px Inter, Arial';
+            ctx.fillText(`Demo Video ${index + 1}`, canvas.width/2, canvas.height/2 + 15);
 
             // Create texture and material
             const texture = new THREE.CanvasTexture(canvas);
