--- a/index.html
+++ b/index.html
@@ -63,47 +63,12 @@
             border: 1px solid rgba(0,0,0,0.05);
         }
 
-        .video-thumbnail {
+        .video-embed {
             width: 100%;
-            height: 300px;
+            height: 400px;
             border-radius: 12px;
-            background: linear-gradient(135deg, var(--gradient-1), var(--gradient-2));
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            transition: transform 0.3s ease;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .video-thumbnail:hover {
-            transform: scale(1.02);
-        }
-
-        .play-button {
-            width: 80px;
-            height: 80px;
-            background: rgba(255,255,255,0.9);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: all 0.3s ease;
-        }
-
-        .video-thumbnail:hover .play-button {
-            transform: scale(1.1);
-            background: rgba(255,255,255,1);
-        }
-
-        .play-icon {
-            width: 0;
-            height: 0;
-            border-left: 20px solid #333;
-            border-top: 12px solid transparent;
-            border-bottom: 12px solid transparent;
-            margin-left: 4px;
+            border: none;
+            background: #f0f0f0;
         }
 
         .video-info {
@@ -315,11 +280,11 @@
         <div class="video-scroll-section">
             <div class="video-item">
                 <div class="video-container">
-                    <div class="video-thumbnail" onclick="window.open('https://www.linkedin.com/posts/activity-7317274213457788928', '_blank')">
-                        <div class="play-button">
-                            <div class="play-icon"></div>
-                        </div>
-                    </div>
+                    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7317274213457788928?compact=1"
+                            class="video-embed"
+                            allowfullscreen
+                            title="Digital Twin Showcase">
+                    </iframe>
                     <div class="video-info">
                         <div class="video-title">Digital Twin Showcase</div>
                         <div class="video-description">Real-time camera integration with Three.js visualization</div>
@@ -329,11 +294,11 @@
 
             <div class="video-item">
                 <div class="video-container">
-                    <div class="video-thumbnail" onclick="window.open('https://www.linkedin.com/posts/activity-7327045924390637569', '_blank')">
-                        <div class="play-button">
-                            <div class="play-icon"></div>
-                        </div>
-                    </div>
+                    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7327045924390637569?compact=1"
+                            class="video-embed"
+                            allowfullscreen
+                            title="IoT Integration Demo">
+                    </iframe>
                     <div class="video-info">
                         <div class="video-title">IoT Integration Demo</div>
                         <div class="video-description">Bridging physical and digital realities</div>
@@ -343,11 +308,11 @@
 
             <div class="video-item">
                 <div class="video-container">
-                    <div class="video-thumbnail" onclick="window.open('https://www.linkedin.com/posts/activity-7340474950006247425', '_blank')">
-                        <div class="play-button">
-                            <div class="play-icon"></div>
-                        </div>
-                    </div>
+                    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7340474950006247425?compact=1"
+                            class="video-embed"
+                            allowfullscreen
+                            title="Advanced Visualization">
+                    </iframe>
                     <div class="video-info">
                         <div class="video-title">Advanced Visualization</div>
                         <div class="video-description">Seamless digital twin technology in action</div>
@@ -357,11 +322,11 @@
 
             <div class="video-item">
                 <div class="video-container">
-                    <div class="video-thumbnail" onclick="window.open('https://www.linkedin.com/posts/activity-7372138036412891136', '_blank')">
-                        <div class="play-button">
-                            <div class="play-icon"></div>
-                        </div>
-                    </div>
+                    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7372138036412891136?compact=1"
+                            class="video-embed"
+                            allowfullscreen
+                            title="Real-time Synchronization">
+                    </iframe>
                     <div class="video-info">
                         <div class="video-title">Real-time Synchronization</div>
                         <div class="video-description">Physical-digital experience demonstration</div>
@@ -371,11 +336,11 @@
 
             <div class="video-item">
                 <div class="video-container">
-                    <div class="video-thumbnail" onclick="window.open('https://www.linkedin.com/posts/activity-7373680075940130816', '_blank')">
-                        <div class="play-button">
-                            <div class="play-icon"></div>
-                        </div>
-                    </div>
+                    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7373680075940130816?compact=1"
+                            class="video-embed"
+                            allowfullscreen
+                            title="Technology Integration">
+                    </iframe>
                     <div class="video-info">
                         <div class="video-title">Technology Integration</div>
                         <div class="video-description">Complete digital twin ecosystem showcase</div>
