--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         }
 
         .video-container {
-            max-width: 600px;
+            max-width: 1200px;
             margin: 0 auto;
             background: linear-gradient(145deg, #ffffff, #f8f8f8);
             border-radius: 20px;
@@ -63,12 +63,22 @@
             border: 1px solid rgba(0,0,0,0.05);
         }
 
-        .video-embed {
+        .video-embed-wrapper {
+            position: relative;
             width: 100%;
-            height: 400px;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio (1080/1920 = 0.5625) */
             border-radius: 12px;
-            border: none;
+            overflow: hidden;
             background: #f0f0f0;
+        }
+
+        .video-embed {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
         }
 
         .video-info {
@@ -280,11 +290,16 @@
         <div class="video-scroll-section">
             <div class="video-item">
                 <div class="video-container">
-                    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7317274213457788928?compact=1"
-                            class="video-embed"
-                            allowfullscreen
-                            title="Digital Twin Showcase">
-                    </iframe>
+                    <div class="video-embed-wrapper">
+                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7317274213457788928"
+                                class="video-embed"
+                                width="1920"
+                                height="1080"
+                                frameborder="0"
+                                allowfullscreen
+                                title="Digital Twin Showcase">
+                        </iframe>
+                    </div>
                     <div class="video-info">
                         <div class="video-title">Digital Twin Showcase</div>
                         <div class="video-description">Real-time camera integration with Three.js visualization</div>
@@ -294,11 +309,16 @@
 
             <div class="video-item">
                 <div class="video-container">
-                    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7327045924390637569?compact=1"
-                            class="video-embed"
-                            allowfullscreen
-                            title="IoT Integration Demo">
-                    </iframe>
+                    <div class="video-embed-wrapper">
+                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7327045924390637569"
+                                class="video-embed"
+                                width="1920"
+                                height="1080"
+                                frameborder="0"
+                                allowfullscreen
+                                title="IoT Integration Demo">
+                        </iframe>
+                    </div>
                     <div class="video-info">
                         <div class="video-title">IoT Integration Demo</div>
                         <div class="video-description">Bridging physical and digital realities</div>
@@ -308,11 +328,16 @@
 
             <div class="video-item">
                 <div class="video-container">
-                    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7340474950006247425?compact=1"
-                            class="video-embed"
-                            allowfullscreen
-                            title="Advanced Visualization">
-                    </iframe>
+                    <div class="video-embed-wrapper">
+                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7340474950006247425"
+                                class="video-embed"
+                                width="1920"
+                                height="1080"
+                                frameborder="0"
+                                allowfullscreen
+                                title="Advanced Visualization">
+                        </iframe>
+                    </div>
                     <div class="video-info">
                         <div class="video-title">Advanced Visualization</div>
                         <div class="video-description">Seamless digital twin technology in action</div>
@@ -322,11 +347,16 @@
 
             <div class="video-item">
                 <div class="video-container">
-                    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7372138036412891136?compact=1"
-                            class="video-embed"
-                            allowfullscreen
-                            title="Real-time Synchronization">
-                    </iframe>
+                    <div class="video-embed-wrapper">
+                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7372138036412891136"
+                                class="video-embed"
+                                width="1920"
+                                height="1080"
+                                frameborder="0"
+                                allowfullscreen
+                                title="Real-time Synchronization">
+                        </iframe>
+                    </div>
                     <div class="video-info">
                         <div class="video-title">Real-time Synchronization</div>
                         <div class="video-description">Physical-digital experience demonstration</div>
@@ -336,11 +366,16 @@
 
             <div class="video-item">
                 <div class="video-container">
-                    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7373680075940130816?compact=1"
-                            class="video-embed"
-                            allowfullscreen
-                            title="Technology Integration">
-                    </iframe>
+                    <div class="video-embed-wrapper">
+                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7373680075940130816"
+                                class="video-embed"
+                                width="1920"
+                                height="1080"
+                                frameborder="0"
+                                allowfullscreen
+                                title="Technology Integration">
+                        </iframe>
+                    </div>
                     <div class="video-info">
                         <div class="video-title">Technology Integration</div>
                         <div class="video-description">Complete digital twin ecosystem showcase</div>
