Add compact=1 parameter to show only videos without full post content

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <div class="video-item">
                 <div class="video-container">
                     <div class="video-embed-wrapper">
-                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7317274213457788928"
+                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7317274213457788928?compact=1"
                                 class="video-embed"
                                 width="1920"
                                 height="1080"
@@ -310,7 +310,7 @@
             <div class="video-item">
                 <div class="video-container">
                     <div class="video-embed-wrapper">
-                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7327045924390637569"
+                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7327045924390637569?compact=1"
                                 class="video-embed"
                                 width="1920"
                                 height="1080"
@@ -329,7 +329,7 @@
             <div class="video-item">
                 <div class="video-container">
                     <div class="video-embed-wrapper">
-                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7340474950006247425"
+                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7340474950006247425?compact=1"
                                 class="video-embed"
                                 width="1920"
                                 height="1080"
@@ -348,7 +348,7 @@
             <div class="video-item">
                 <div class="video-container">
                     <div class="video-embed-wrapper">
-                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7372138036412891136"
+                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7372138036412891136?compact=1"
                                 class="video-embed"
                                 width="1920"
                                 height="1080"
@@ -367,7 +367,7 @@
             <div class="video-item">
                 <div class="video-container">
                     <div class="video-embed-wrapper">
-                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7373680075940130816"
+                        <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7373680075940130816?compact=1"
                                 class="video-embed"
                                 width="1920"
                                 height="1080"
