--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
         .video-scroll-section {
             margin-top: 4rem;
-            padding: 4rem 2rem;
+            padding: 4rem 1rem;
         }
 
         .video-item {
-            margin-bottom: 6rem;
+            margin-bottom: 8rem;
             opacity: 0;
             transform: translateY(50px);
             transition: all 0.8s ease;
@@ -54,22 +54,38 @@
         }
 
         .video-container {
-            max-width: 1200px;
+            max-width: 90vw;
             margin: 0 auto;
             background: linear-gradient(145deg, #ffffff, #f8f8f8);
-            border-radius: 20px;
-            padding: 2rem;
-            box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+            border-radius: 24px;
+            padding: 3rem;
+            box-shadow: 0 30px 60px rgba(0,0,0,0.12);
             border: 1px solid rgba(0,0,0,0.05);
+        }
+
+        @media (max-width: 1400px) {
+            .video-container {
+                max-width: 95vw;
+                padding: 2rem;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .video-container {
+                max-width: 100%;
+                padding: 1.5rem;
+                border-radius: 16px;
+            }
         }
 
         .video-embed-wrapper {
             position: relative;
             width: 100%;
             padding-bottom: 56.25%; /* 16:9 aspect ratio (1080/1920 = 0.5625) */
-            border-radius: 12px;
+            border-radius: 16px;
             overflow: hidden;
-            background: #f0f0f0;
+            background: #000;
+            box-shadow: 0 20px 40px rgba(0,0,0,0.15);
         }
 
         .video-embed {
@@ -82,21 +98,33 @@
         }
 
         .video-info {
-            margin-top: 1.5rem;
+            margin-top: 2rem;
             text-align: center;
         }
 
         .video-title {
-            font-size: 1.2rem;
+            font-size: 1.6rem;
             font-weight: 500;
             color: var(--fg);
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.8rem;
+            letter-spacing: -0.02em;
         }
 
         .video-description {
-            font-size: 0.9rem;
+            font-size: 1.1rem;
             color: var(--light-gray);
             line-height: 1.6;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        @media (max-width: 768px) {
+            .video-title {
+                font-size: 1.3rem;
+            }
+            .video-description {
+                font-size: 1rem;
+            }
         }
 
         .container {
