Update contact overlay with email address anton.mikael.gronvall@outlook.com

--- a/index.html
+++ b/index.html
@@ -429,8 +429,12 @@
         <div class="overlay-content">
             <h2>Contact</h2>
             <p>
-                Ready to bridge realities? Connect with our team of digital twin specialists.
-                Let's create the future of synchronized physical-digital experiences together.
+                Ready to bridge realities? Get in touch to discuss your digital twin project.
+            </p>
+            <p style="margin-top: 2rem;">
+                <a href="mailto:anton.mikael.gronvall@outlook.com" style="color: var(--fg); font-size: 1.2rem; text-decoration: none; border-bottom: 2px solid var(--light-gray); padding-bottom: 2px; transition: border-color 0.3s;">
+                    anton.mikael.gronvall@outlook.com
+                </a>
             </p>
         </div>
     </div>
